--- a/pybo/templates/question/main.html
+++ b/pybo/templates/question/main.html
@@ -15,7 +15,7 @@
         .my_input {
             
               height: 40px;
-              width: 200px;
+              width: 189px;
 
               padding: 1px 1px 1px 1px; /* 상, 우, 좌, 하 */
               margin-top: 10px;
@@ -48,17 +48,17 @@
               border-top: #888888 0px solid;
               border-bottom: #888888 0px solid;
               font-family:cafe24;
-              font-size: 35pt; 
+              font-size: 30pt; 
               background-color:rgb(255, 238, 0);
               border-radius: 10pt;
               padding-top: 5pt;
-              width: 302pt;
+              width: 282pt;
         }
 
         .bgSizeCover {
             
-            background-image: url("static/card.png");
-            background-size: "cotain";
+            background-image: url("static/card_fix.png");
+            background-size: "1000px 1000px";
             background-repeat: no-repeat;
             width: 700px;
             height: 1120px;
@@ -80,8 +80,8 @@
 <body class="bgSizeCover"></body>
 
     <form method="POST" action="/calculate">
-        <h1 style="font-family: cafe24; color: #FFFFFF;margin-left: 47px; float:left;"> 상품명 </h1>
-        <h1 style="font-family: cafe24; color: #FFFFFF;margin-left: 115px;margin-right: 300px; float:left;"> 가격 </h1><br>
+        <h1 style="font-family: cafe24; color: #FFFFFF;margin-left: 25px; float:left;"> [상품명] </h1>
+        <h1 style="font-family: cafe24; color: #FFFFFF;margin-left: 73px;margin-right: 200px; float:left;"> [가격] </h1><br>
 
         <input type="text" name="t1" class="my_input">
         <input type="number" name="n1" class="my_input"><br>
