--- a/pybo/templates/question/main.html
+++ b/pybo/templates/question/main.html
@@ -34,7 +34,8 @@
               font-family: 궁서, Gulim, 'Times New Roman';
               */
               color: #000000;
-              font-size: 22pt; 
+              font-size: 20pt; 
+              line-height : 40pt;
               font-weight: normal; /* normal, bold, bolder, lighter, 100, 200, 300, 400, 500, 600, 700, 800, 900 */
               font-style: normal; /* normal, italic, oblique */;
 
