--- a/pybo/templates/question/main.html
+++ b/pybo/templates/question/main.html
@@ -19,7 +19,7 @@
 
               /* 상, 우, 좌, 하 */
               /* padding: 1px 1px 1px 1px; */
-              margin-top: 10px;
+              /* margin-top: 5px; */
               text-align: center; /* left, center, right */
               border: #888888 1px solid;
               background-color: #FFFFFF;
@@ -35,7 +35,6 @@
               */
               color: #000000;
               font-size: 20pt; 
-              line-height : 40pt;
               font-weight: normal; /* normal, bold, bolder, lighter, 100, 200, 300, 400, 500, 600, 700, 800, 900 */
               font-style: normal; /* normal, italic, oblique */;
 
@@ -86,11 +85,16 @@
         <h1 style="font-family: cafe24; color: #FFFFFF;margin-left: 25px; float:left;"> [상품명] </h1>
         <h1 style="font-family: cafe24; color: #FFFFFF;margin-left: 75px;margin-right: 200px; float:left;"> [가격] </h1><br>
 
+        <p style="line-height : 30pt;">
         <input type="text" name="t1" class="my_input">
-        <input type="number" name="n1" class="my_input"><br>
+        <input type="number" name="n1" class="my_input">
+        </p>
         
+        <p style="line-height : 30pt;"></p>
         <input type="text" name="t2" class="my_input">
-        <input type="number" name="n2" class="my_input"><br>
+        <input type="number" name="n2" class="my_input">
+        </p>
+
         <input type="text" name="t3" class="my_input">
         <input type="number" name="n3" class="my_input"><br>
         <input type="text" name="t4" class="my_input">
