--- a/pybo/templates/question/main.html
+++ b/pybo/templates/question/main.html
@@ -90,41 +90,76 @@
         <input type="number" name="n1" class="my_input">
         </p>
         
-        <p style="line-height : 30pt;"></p>
+        <p style="line-height : 30pt;">
         <input type="text" name="t2" class="my_input">
         <input type="number" name="n2" class="my_input">
         </p>
 
+        <p style="line-height : 30pt;">
         <input type="text" name="t3" class="my_input">
-        <input type="number" name="n3" class="my_input"><br>
+        <input type="number" name="n3" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
         <input type="text" name="t4" class="my_input">
-        <input type="number" name="n4" class="my_input"><br>
+        <input type="number" name="n4" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
         <input type="text" name="t5" class="my_input">
-        <input type="number" name="n5" class="my_input"><br>
+        <input type="number" name="n5" class="my_input">
+        </p>
 
+        <p style="line-height : 30pt;">
         <input type="text" name="t6" class="my_input">
-        <input type="number" name="n6" class="my_input"><br>
+        <input type="number" name="n6" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
         <input type="text" name="t7" class="my_input">
-        <input type="number" name="n7" class="my_input"><br>
+        <input type="number" name="n7" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
         <input type="text" name="t8" class="my_input">
-        <input type="number" name="n8" class="my_input"><br>
+        <input type="number" name="n8" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
         <input type="text" name="t9" class="my_input">
-        <input type="number" name="n9" class="my_input"><br>
+        <input type="number" name="n9" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
         <input type="text" name="t10" class="my_input">
-        <input type="number" name="n10" class="my_input"><br>
+        <input type="number" name="n10" class="my_input">
+        </p>
 
+        <p style="line-height : 30pt;">
         <input type="text" name="t11" class="my_input">
-        <input type="number" name="n11" class="my_input"><br>
-        <input type="text" name="t12" class="my_input">
-        <input type="number" name="n12" class="my_input"><br>
-        <input type="text" name="t13" class="my_input">
-        <input type="number" name="n13" class="my_input"><br>
-        <input type="text" name="t14" class="my_input">
-        <input type="number" name="n14" class="my_input"><br>
-        <input type="text" name="t15" class="my_input">
-        <input type="number" name="n15" class="my_input"><br>
+        <input type="number" name="n11" class="my_input">
+        </p>
 
-        <br>
+        <p style="line-height : 30pt;">
+        <input type="text" name="t12" class="my_input">
+        <input type="number" name="n12" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
+        <input type="text" name="t13" class="my_input">
+        <input type="number" name="n13" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
+        <input type="text" name="t14" class="my_input">
+        <input type="number" name="n14" class="my_input">
+        </p>
+
+        <p style="line-height : 30pt;">
+        <input type="text" name="t15" class="my_input">
+        <input type="number" name="n15" class="my_input">
+        </p>
+
         <button type="image" class="my_button">계산하기</button>
         <!-- <img src="static/card.png" alt="" style="height: 60px; width: 100px;"> -->
     </form>
