--- a/pybo/templates/question/main.html
+++ b/pybo/templates/question/main.html
@@ -53,17 +53,17 @@
               background-color:rgb(255, 238, 0);
               border-radius: 10pt;
               padding-top: 5pt;
-              width: 282pt;
+              width: 285pt;
               
         }
 
         .bgSizeCover {
             
-            background-image: url("static/card_fix.png");
+            background-image: url("static/card_fix2.png");
             background-size: "1000px 1000px";
             background-repeat: no-repeat;
             width: 700px;
-            height: 1120px;
+            height: 1300px;
             /* border: 2px solid; */
             color: rgb(14, 14, 14);
             resize: both;
