--- a/pybo/templates/question/login.html
+++ b/pybo/templates/question/login.html
@@ -27,7 +27,7 @@
      </script>
     </head>
 
-<body>
+<body style="width: 700px;height: 1300px;">
   
     <div class="container" style="display: flex;justify-content: center;align-items: center;font-family: cafe24;">
 
