--- a/pybo/templates/question/login.html
+++ b/pybo/templates/question/login.html
@@ -29,12 +29,12 @@
 
 <body style="width: 500px;height: 1300px;">
   
-    <div class="container" style="display: flex;justify-content: center;align-items: center;font-family: cafe24;">
+    <div class="container" style="display: flex;justify-content: center;align-items: center;">
 
         <form method="POST" >   
             {{form.csrf_token}}
 
-            <div class="row mt-5" style="font-size:28pt; margin-bottom: 10pt;">
+            <div class="form-group" style="font-size:28pt; margin-bottom: 10pt;margin-top: 20pt;">
                 더모아카드 계산기 로그인
             </div>
 
