--- a/pybo/templates/question/signup.html
+++ b/pybo/templates/question/signup.html
@@ -11,7 +11,7 @@
 </style>
 
 
-<body style="width: 600px;height: 1300px;">
+<body style="width: 500px;height: 1300px;">
     {% extends "question/base.html" %}
     {% block content %}
     <div class="container" style="display: flex;justify-content: center;align-items: center;font-family: cafe24;">
@@ -19,26 +19,26 @@
             {{ form.csrf_token }}
             {% include "question/form_errors.html" %}
             <div class="form-group" style="font-size: 16pt;margin-top: 20px;">
-                <label for="username">사용자 이름</label>
+                <label for="username">아이디</label>
                 <input type="text" class="form-control" name="username" id="username"
-                    value="{{ form.username.data or '' }}">
+                    value="{{ form.username.data or '' }}" style="width:400px;height:50px;">
             </div>
             <div class="form-group" style="font-size: 16pt;">
                 <label for="password1">비밀번호</label>
                 <input type="password" class="form-control" name="password1" id="password1"
-                    value="{{ form.password1.data or '' }}">
+                    value="{{ form.password1.data or '' }}" style="width:400px;height:50px;">
             </div>
             <div class="form-group" style="font-size: 16pt;">
                 <label for="password2">비밀번호 확인</label>
                 <input type="password" class="form-control" name="password2" id="password2"
-                    value="{{ form.password2.data or '' }}">
+                    value="{{ form.password2.data or '' }}" style="width:400px;height:50px;">
             </div>
             <div class="form-group" style="font-size: 16pt;font-family: cafe24;">
                 <label for="email">이메일</label>
                 <input type="text" class="form-control" name="email" id="email"
-                    value="{{ form.email.data or '' }}">
+                    value="{{ form.email.data or '' }}" style="width:400px;height:50px;">
             </div>
-            <button type="submit" class="btn btn-primary" style="width:510px; height:50px; font-size: 16pt;">생성하기</button>
+            <button type="submit" class="btn btn-primary" style="width:400px; height:50px; font-size: 16pt;">생성하기</button>
         </form>
     </div>
     {% endblock %}
