--- a/pybo/templates/question/main.html
+++ b/pybo/templates/question/main.html
@@ -70,6 +70,7 @@
             overflow: scroll;
             padding-top: 100px;
             padding-left: 40px;
+            /* background-position: center;  */
         }
     </style>
 
@@ -79,7 +80,7 @@
     </title>
 </head>
 <!-- <body style="padding-left: 15px;"> -->
-<body class="bgSizeCover"></body>
+<body class="bgSizeCover">
 
     <form method="POST" action="/calculate">
 
