--- a/pybo/templates/question/login.html
+++ b/pybo/templates/question/login.html
@@ -63,7 +63,7 @@
             <div class="form-group" style="font-size:22px;">
                 <a href="{{ url_for('signup') }}">계정생성</a>
             </div>
-
+            {% include "question/form_errors.html" %}
         </form>
 
     </div>
